--- a/frontend/local/package.json
+++ b/frontend/local/package.json
@@ -7,12 +7,12 @@
         "npm-run-all": "^4.1.2",
         "react-form": "^3.4.0",
         "react-scripts": "2.0.0-next.47d2d941",
+        "react-select": "^1.2.1",
         "reactstrap": "^5.0.0-beta.3"
     },
     "scripts": {
         "build-shared-css": "node-sass-chokidar --include-path ../shared/ --include-path ../node_modules ../shared/ -o ../shared/",
-        "watch-shared-css":
-            "npm run build-shared-css && node-sass-chokidar --include-path ../shared/ --include-path ../node_modules ../shared/ -o ../shared/ --watch --recursive",
+        "watch-shared-css": "npm run build-shared-css && node-sass-chokidar --include-path ../shared/ --include-path ../node_modules ../shared/ -o ../shared/ --watch --recursive",
         "build-css": "node-sass-chokidar --include-path ./src --include-path ../node_modules src/ -o src/",
         "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ../node_modules src/ -o src/ --watch --recursive",
         "start-js": "PORT=3001 react-scripts start",
